# saniraq.kz

./: alembic.ini  dockerfile  pyproject.toml
app/: alembic.ini  database.py  env.py  main.py
app/alembic/: env.py
app/alembic/versions/: 00923211b494_initial_migration.py  24ecd5b24d89_add_comments_table.py  3c880526e38a_added_account_table.py  6bba31eb4f2c_create_favorites_table.py  71c996802cb7_fix_foreign_keys.py  890bffa5ed76_initial_migration.py  9ea457c3a8e1_changed_houses_table.py  ea4b0da967f4_add_comments_table.py  ec8ba392db67_updating_houses.py
app/api/: favorites.py  house.py  user.py
app/models/: comment.py  favorites.py  house.py  user.py
app/repository/: comment.py  favorites.py  house.py  user.py
app/schemas/: comment.py  house.py  user.py
scripts/: launch.sh
